# group11-campus-qa-assistant

./: .gitignore  DAY2-SUBMISSION.md  README.md  docker-compose.yml  start-dev.cmd
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  answer_insights.py  captcha.py  cli.py  config.py  database.py  document_files.py  document_jobs.py  hhu_reader.py  main.py  rag.py  rag_engine_v2.py  web_documents.py
backend/tests/: test_api.py
demo-rag/: Day3_最小RAG_课堂演示.ipynb
docs/: Day4-Day6-最终验收矩阵.md  INSTALL-WINDOWS.md  README.md  architecture.md  requirements.md  tasks.md
docs/archive/: design-detailed-v1.md  requirements-original.md
docs/day2/: Day2-流程图.md  PPT-逐项验收矩阵.md  rag-flow.dot  system-flow.dot
docs/day4/: Day4-业务模块开发说明.md  Day4-团队日报_2026-07-17.md
docs/day5/: Day5-团队日报_2026-07-17.md  Day5-完成报告.md
docs/day6/: Day6-团队日报_2026-07-17.md  Day6-测试报告.md  Day6-部署说明.md  发布清单.md  答辩演示剧本.md  项目总结.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.widget.config.ts  widget.html
frontend/src/: App.tsx  api.ts  index.css  vite-env.d.ts  widget.tsx
frontend/src/components/: AnswerInsights.tsx  ChatInput.tsx  ChatWidget.tsx  ChatWindow.tsx  ConversationSidebar.tsx  MessageList.tsx  PublicHome.tsx  (+3 more)
knowledge-base/: INDEX.md  README.md
knowledge-base/demo/: student-services.md  学校简介.md
scripts/: captcha_prompt.py  download-demo-index.py  performance_check.py  smoke_test.py
site-snapshot/: index-widget.html  index.html  widget.js
site-snapshot/_js/: jquery.sudy.wp.visitcount.js
(+59 files in other folders)
