[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[project]
name = "campus-qa-backend"
version = "1.0.0"
description = "Campus knowledge assistant API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1",
  "email-validator>=2.2.0,<3",
  "uvicorn[standard]>=0.34.0,<1",
  "python-multipart>=0.0.20,<1",
  "pypdf>=5.0.0,<6",
  "python-docx>=1.1.2,<2",
  "openai>=1.58.0,<3",
  "pillow>=11.0.0,<13",
  "python-dotenv>=1.0.1,<2",
  "httpx>=0.28.0,<1",
  "dashscope>=1.20.0",
  "faiss-cpu>=1.9.0",
  "numpy>=1.26.0",
  "llama-index>=0.12.0",
  "llama-index-embeddings-dashscope>=0.3.0",
  "llama-index-llms-dashscope>=0.3.0",
  "llama-index-vector-stores-faiss>=0.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9",
  "pytest-cov>=6.0.0,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
